# devices-automatization

./: Makefile  README.md  do_it_yourself.py  pyproject.toml  test_scanner.py
refs/: scanner_handler.py
